# CamGrab

./: CMakeLists.txt  License.md  README.md
src/: CMakeLists.txt  main.cpp  qedit.tlh
